--- a/src/styling/Home.css
+++ b/src/styling/Home.css
@@ -44,3 +44,27 @@
     box-shadow: 0px 0px 2px 2px white;
 
 }
+
+@media (max-width:600px) {
+    .background{
+        width: 50%;
+        height: 50%;
+        background-image: url(../assets/blurProf.jpg);
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-position: center;
+        background-size: auto;
+        background-color: rgb(39, 39, 39);
+        background-blend-mode: screen, darken,hue;
+    }
+    .column{
+        display: flex;
+        flex-direction: column;
+        color: white;
+        font-weight: 1100;
+        max-width: 50rem;
+        text-shadow: 3px 3px 3px 1px rgb(39, 39, 39);
+        padding-left: 7%;
+        padding-top:20%;
+    }
+}
